--- a/FoodStock/FoodStock.Common/FoodStock.Common.csproj
+++ b/FoodStock/FoodStock.Common/FoodStock.Common.csproj
@@ -41,7 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\EditHandbooksCommand.cs" />
+    <Compile Include="Commands\OpenHandbookCommand.cs" />
+    <Compile Include="DomainModel\Advice.cs" />
+    <Compile Include="DomainModel\AdviceCatalog.cs" />
+    <Compile Include="DomainModel\Dish.cs" />
+    <Compile Include="DomainModel\DishesTree.cs" />
+    <Compile Include="DomainModel\EnergyCost.cs" />
+    <Compile Include="DomainModel\EnergyCostTree.cs" />
+    <Compile Include="DomainModel\FoodItem.cs" />
+    <Compile Include="DomainModel\FoodItemsTree.cs" />
+    <Compile Include="DomainModel\Handbook.cs" />
+    <Compile Include="IHandbooksRepository.cs" />
+    <Compile Include="IHandbooksPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
