--- a/FoodStock/FoodStock.CommonTests/FoodStock.CommonTests.csproj
+++ b/FoodStock/FoodStock.CommonTests/FoodStock.CommonTests.csproj
@@ -69,6 +69,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Commands\EditHandbooksCommandTests.cs" />
+    <Compile Include="DomainModel\DishTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
