--- a/FoodStock/FoodStock.CommonTests/FoodStock.CommonTests.csproj
+++ b/FoodStock/FoodStock.CommonTests/FoodStock.CommonTests.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="Commands\EditHandbooksCommandTests.cs" />
     <Compile Include="DomainModel\DishTests.cs" />
+    <Compile Include="DomainModel\FoodItemsCatalogTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
